k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast2book-service
spec:
  type: ClusterIP
  selector:
    app: fast2book
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
